# podcast-search

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: app.py  config.py  embedding.py  episode.py  store.py  titles.py
