[project]
name = "podcast-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "fugashi>=1.4.0",
    "ipywidgets>=8.1.5",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "polars>=1.18.0",
    "pyarrow>=18.1.0",
    "sentence-transformers>=3.3.1",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "unidic-lite>=1.0.8",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
    "pandas-stubs>=2.2.3.241126",
    "pytest>=8.3.4",
]
